--- a/industry/templates/industry/layouts/base_layout.html
+++ b/industry/templates/industry/layouts/base_layout.html
@@ -100,6 +100,7 @@
             <a href="{{ messages }}">
                 <li class="list-group-item text-right {% if request.get_full_path == messages %}active{% endif %}">
                     <div>
+                        <span class="new-message">2</span>
                         <span>پیام ها</span>
                         <span class="fas fa-envelope"></span>
                     </div>
