--- a/industry/templates/industry/layouts/showProject.html
+++ b/industry/templates/industry/layouts/showProject.html
@@ -2,12 +2,12 @@
 <div class="fixed-back showProject">
     <div class="card text-right stick-footer">
         <div class="close"></div>
+        <div class="vote">
+            <i class="fas fa-ellipsis-v"></i>
+        </div>
         <div class="card-head"></div>
-        <div class="vote" style="display: none">
-            <span class="dots"></span>
-            <div class="vote-dialog">
-                <div class="card expert-back text-center">ارزیابی از استاد</div>
-            </div>
+        <div class="vote-dialog">
+            <div class="card expert-back text-center">ارزیابی از استاد</div>
         </div>
         <div class="container">
             <div class="row">
@@ -63,48 +63,48 @@
                     <div class="section">
                         <div class="project-info-innerDiv">
                             <div class="project-info-content">
-{#                                <div>#}
-{#                                    <div class="question">#}
-{#                                        <span class="question-mark">#}
-{#                                            <i class="far fa-question-circle"></i>#}
-{#                                        </span>#}
-{#                                        لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.#}
-{#                                    </div>#}
-{#                                    <div class="answer">#}
-{#                                        نمونه های موجود در بازار همه از خارج از کشور وارد میشوند و ادعا میشود که از خون#}
-{#                                        جنین گاو در تولید آن ها استفاده میشود ولی این کار بسیار هزینه بر است.#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                                <div>#}
-{#                                    <div class="question">#}
-{#                                        <span class="question-mark">#}
-{#                                            <i class="far fa-question-circle"></i>#}
-{#                                        </span>#}
-{#                                        در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات#}
-{#                                        درمانی یا ... حاصل می شود؟#}
-{#                                    </div>#}
-{#                                    <div class="answer">#}
-{#                                        مصرف کننده های این محصول ، داروسازی ها و مراکز پژوهشی میباشد که در حال حاضر#}
-{#                                        تولیدکننده این محصول شرکت THERMO FISHER میباشد. اگر کیفیت محصول تولیدی خوب باشد#}
-{#                                        میتواند جایگزین نمونه خارجی شود.#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                                <div>#}
-{#                                    <div class="question">#}
-{#                                        <span class="question-mark">#}
-{#                                            <i class="far fa-question-circle"></i>#}
-{#                                        </span>#}
-{#                                        برآورد شما از سود مالی این پروژه چگونه است؟#}
-{#                                    </div>#}
-{#                                    <div class="answer">#}
-{#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
-{#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
-{#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
-{#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
-{#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
-{#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
-{#                                    </div>#}
-{#                                </div>#}
+                                {#                                <div>#}
+                                {#                                    <div class="question">#}
+                                {#                                        <span class="question-mark">#}
+                                {#                                            <i class="far fa-question-circle"></i>#}
+                                {#                                        </span>#}
+                                {#                                        لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.#}
+                                {#                                    </div>#}
+                                {#                                    <div class="answer">#}
+                                {#                                        نمونه های موجود در بازار همه از خارج از کشور وارد میشوند و ادعا میشود که از خون#}
+                                {#                                        جنین گاو در تولید آن ها استفاده میشود ولی این کار بسیار هزینه بر است.#}
+                                {#                                    </div>#}
+                                {#                                </div>#}
+                                {#                                <div>#}
+                                {#                                    <div class="question">#}
+                                {#                                        <span class="question-mark">#}
+                                {#                                            <i class="far fa-question-circle"></i>#}
+                                {#                                        </span>#}
+                                {#                                        در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات#}
+                                {#                                        درمانی یا ... حاصل می شود؟#}
+                                {#                                    </div>#}
+                                {#                                    <div class="answer">#}
+                                {#                                        مصرف کننده های این محصول ، داروسازی ها و مراکز پژوهشی میباشد که در حال حاضر#}
+                                {#                                        تولیدکننده این محصول شرکت THERMO FISHER میباشد. اگر کیفیت محصول تولیدی خوب باشد#}
+                                {#                                        میتواند جایگزین نمونه خارجی شود.#}
+                                {#                                    </div>#}
+                                {#                                </div>#}
+                                {#                                <div>#}
+                                {#                                    <div class="question">#}
+                                {#                                        <span class="question-mark">#}
+                                {#                                            <i class="far fa-question-circle"></i>#}
+                                {#                                        </span>#}
+                                {#                                        برآورد شما از سود مالی این پروژه چگونه است؟#}
+                                {#                                    </div>#}
+                                {#                                    <div class="answer">#}
+                                {#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
+                                {#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
+                                {#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
+                                {#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
+                                {#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
+                                {#                                        براورد دقیقی از سود حاصل در دست نیست ولی این پروژه سود زیادی دارد.#}
+                                {#                                    </div>#}
+                                {#                                </div>#}
                             </div>
                         </div>
                     </div>
@@ -115,15 +115,15 @@
                     {% include 'industry/layouts/comment.html' %}
                 </div>
             </div>
-{#            <div class="card-footer">#}
-{#                <input type="text" name="add-comment" class="w-100">#}
-{#                <span class="send-comment">#}
-{##}
-{#                </span>#}
-{#                <span class="attach-comment">#}
-{##}
-{#                </span>#}
-{#            </div>#}
+            {#            <div class="card-footer">#}
+            {#                <input type="text" name="add-comment" class="w-100">#}
+            {#                <span class="send-comment">#}
+            {##}
+            {#                </span>#}
+            {#                <span class="attach-comment">#}
+            {##}
+            {#                </span>#}
+            {#            </div>#}
         </div>
     </div>
 </div>
