--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -87,6 +87,7 @@
             <a href="{{ messages_url }}">
                 <li class="list-group-item text-right {% if request.get_full_path == messages_url %}active{% endif %}">
                     <div>
+                        <span class="new-message">2</span>
                         <span>پیام ها</span>
                         <span class="fas fa-envelope"></span>
                     </div>
