--- a/expert/templates/expert/layouts/comment.html
+++ b/expert/templates/expert/layouts/comment.html
@@ -12,7 +12,7 @@
                         <input type="text" class="researcher_id" name="researcher_id" value="" hidden>
                         <input type="text" name="comment_replyed" id="comment_replyed" value="None" hidden>
                         <div class="send-comment-container">
-                            <button class="image-btn-circle" type="button"></button>
+                            <button class="image-btn-circle" type="submit"></button>
                             <div class="comment-input">
                                 <label for="description"></label>
                                 <textarea dir="rtl" id="description" class="" name="description" rows="1"
