--- a/researcher/templates/researcher/layouts/base_layout.html
+++ b/researcher/templates/researcher/layouts/base_layout.html
@@ -88,7 +88,9 @@
             <a href="{{ messages_url }}">
                 <li class="list-group-item text-right {% if messages_url == request.get_full_path %}active{% endif %}">
                     <div>
-                        <span class="new-message">{{UnseenMessages}}</span>
+                        {% if UnseenMessages %}
+                            <span class="new-message">{{UnseenMessages}}</span>
+                        {% endif %}
                         <span>پیام ها</span>
                         <span class="fas fa-envelope"></span>
                     </div>
