fix researcher technique

--- a/expert/templates/expert/questions.html
+++ b/expert/templates/expert/questions.html
@@ -1,6 +1,6 @@
 {% extends "expert/layouts/base_layout.html" %}
 {% load static %}
-{% load custom_tags %}
+{% load date_tags %}
 
 {% block title %}سوالات پژوهشی{% endblock %}
 
