--- a/researcher/templates/researcher/technique.html
+++ b/researcher/templates/researcher/technique.html
@@ -24,7 +24,7 @@
                 {% for tech in technique_list %}
                     <div class="card box flow-root-display w-100">
                         <div class="box-header text-right">
-                            <h6>{{ tech.technique.technique_title }}</h6>
+                                <h6>{{ tech.technique.technique_title }}</h6>
                         </div>
                         <div class="box-body">
                             <div class="row">
@@ -51,10 +51,12 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-md-6 col-4">
-                                    <button class="default-btn show-btn new-review-request">ارتقا نمره</button>
-                                </div>
+                                </div>          
+                                {% if tech.level %}
+                                    <div class="col-md-6 col-4">
+                                        <button id={{tech.id}} class="default-btn show-btn new-review-request">ارتقا نمره</button>
+                                    </div>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
