industry comment fixed

--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -63,7 +63,7 @@
                             <div class="notification">
                                 <i class="far fa-comment-alt center-abs"></i>
                                 {% if project.industryUnseenCommentCount %}
-                                    <span>{{ project.industryUnseenCommentCount }}</span>
+                                    <span class="unseen-comments">{{ project.industryUnseenCommentCount }}</span>
                                 {% endif %}
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                             <div class="notification">
                                 <i class="far fa-comment-alt center-abs"></i>
                                 {% if project.industryUnseenCommentCount %}
-                                    <span>{{ project.industryUnseenCommentCount }}</span>
+                                    <span class="unseen-comments">{{ project.industryUnseenCommentCount }}</span>
                                 {% endif %}
                             </div>
                         </div>
@@ -184,7 +184,7 @@
                             <div class="notification">
                                 <i class="far fa-comment-alt center-abs"></i>
                                 {% if project.industryUnseenCommentCount %}
-                                    <span>{{ project.industryUnseenCommentCount }}</span>
+                                    <span class="unseen-comments">{{ project.industryUnseenCommentCount }}</span>
                                 {% endif %}
                             </div>
                         </div>
@@ -250,7 +250,7 @@
                             <div class="notification">
                                 <i class="far fa-comment-alt center-abs"></i>
                                 {% if project.industryUnseenCommentCount %}
-                                    <span>{{ project.industryUnseenCommentCount }}</span>
+                                    <span class="unseen-comments">{{ project.industryUnseenCommentCount }}</span>
                                 {% endif %}
                             </div>
                         </div>
